tests/compile_errors/005-bad-named-variable-value.buzz
// Bad value type: got type `int`, expected `tests\compile_errors\005-bad-named-variable-value.buzz.Yo`
object Yo {
    name: str,
}

test "Wrong named variable value" {
    var yo = Yo{ name = "yolo" };

    yo = 12;
}
